# sm-manager

./: .gitignore  .platform_credentials.example.json  README.md  agent.md  pyproject.toml
config/: README.md  instagram_oauth.example.env
runtime/: README.md
secrets/: README.md
src/sm_manager/: README.md  __init__.py  __main__.py  cli.py
src/sm_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sm_manager/core/: README.md  accounts.py  config.py  db.py  log_config.py  secret_store.py  secrets.py
src/sm_manager/scheduler/: README.md
src/sm_manager/ui/: README.md  app.py
tests/: test_smoke.py
